Stub out MiNiFi main... need to figure out what to do about all the spring.

--- a/nifi-nar-bundles/pom.xml
+++ b/nifi-nar-bundles/pom.xml
@@ -96,7 +96,8 @@
         <module>nifi-druid-bundle</module>
         <module>nifi-jolt-record-bundle</module>
 		<module>nifi-network-bundle</module>
-  </modules>
+        <module>nifi-minifi-bundle</module>
+    </modules>
 
     <build>
         <plugins>
