MINIFI-488 complete conversion and startup.

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-resources/src/main/resources/conf/nifi.properties
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-resources/src/main/resources/conf/nifi.properties
@@ -254,3 +254,7 @@ nifi.kerberos.spnego.authentication.expiration=${nifi.kerberos.spnego.authentica
 # external properties files for variable registry
 # supports a comma delimited list of file locations
 nifi.variable.registry.properties=
+
+# MiNiFi Properties #
+# These are stubbed out to help facilitate incorporation.  If these lines are still here on merge, kick the contributor, please.
+nifi.minifi.config=./conf/config.yml
