--- a/nifi-bootstrap/pom.xml
+++ b/nifi-bootstrap/pom.xml
@@ -80,6 +80,11 @@ language governing permissions and limitations under the License. -->
             <artifactId>minifi-commons-schema</artifactId>
             <version>0.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.nifi.minifi</groupId>
+            <artifactId>minifi-bootstrap</artifactId>
+            <version>0.5.0</version>
+        </dependency>
 
     </dependencies>
 </project>
