--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '1.8', '11' ]
+        java: [ '1.8', '11', '13' ]
     name: Ubuntu Build NiFi - JDK${{ matrix.java }}
 
     steps:
